# music-library-analyzer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  analyzer.py  app.py  metadata.csv  mktables.r  readme.md  requirments.txt  toCSV.c
R/: artist_count.r  id3_version_dist.r  req.r  search_by_artist.r  songs_by_year.r  sub_genre_count.r  unique_albums.r
sample/: metadata.csv
